--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Legends -- Iceland'
 - !lcsh 'Sagas -- Translations into French'
 - !lcc 'PT'
+- GITenberg
 title: 'Gunnar et Nial
 
   scènes et moeurs de la vieille Islande'
